force-app/main/default/objects/Registration__c/fields/AltRevenueTax__c.field-meta.xml
<CustomField>
    <fullName>AltRevenueTax__c</fullName>
    <label>Alt. Revenue Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>