force-app/main/default/objects/Registration__c/fields/AwarenessSustainmentFee__c.field-meta.xml
<CustomField>
    <fullName>AwarenessSustainmentFee__c</fullName>
    <label>Awareness Sustainment Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>