force-app/main/default/objects/Registration__c/fields/BaseRegistrationFee__c.field-meta.xml
<CustomField>
    <fullName>BaseRegistrationFee__c</fullName>
    <label>Base Registration Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>