force-app/main/default/objects/Registration__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registration History</relationshipLabel>
    <relationshipName>RegistrationHistory</relationshipName>
    <type>Lookup</type>
</CustomField>