force-app/main/default/objects/Registration__c/fields/CustomerPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>CustomerPurchaseOrder__c</fullName>
    <label>Customer Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>