force-app/main/default/objects/Registration__c/fields/ExitDate__c.field-meta.xml
<CustomField>
    <fullName>ExitDate__c</fullName>
    <label>Exit Date</label>
    <type>DateTime</type>
</CustomField>