force-app/main/default/objects/Registration__c/fields/FederalTax__c.field-meta.xml
<CustomField>
    <fullName>FederalTax__c</fullName>
    <label>Federal Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>