force-app/main/default/objects/Registration__c/fields/FranchiseID__c.field-meta.xml
<CustomField>
    <fullName>FranchiseID__c</fullName>
    <formula>Owner:User.Franchise_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise ID</label>
    <type>Text</type>
</CustomField>