force-app/main/default/objects/Registration__c/fields/KeyCode__c.field-meta.xml
<CustomField>
    <fullName>KeyCode__c</fullName>
    <label>Key Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>