force-app/main/default/objects/Registration__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bombora - APAC/EMEA</fullName>
            </value>
            <value>
                <fullName>Call / Email / Walk In</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Corporate Marketing Event</fullName>
            </value>
            <value>
                <fullName>Corporate Online Marketing Event</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>DCA Coaching POC</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Eventbrite</fullName>
            </value>
            <value>
                <fullName>Existing Account</fullName>
            </value>
            <value>
                <fullName>Ext. Directory (Avention, Kompass...)</fullName>
            </value>
            <value>
                <fullName>Ext. Imported List</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Field Exec</fullName>
            </value>
            <value>
                <fullName>FindCourses Referral</fullName>
            </value>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Global Sales Self Generated</fullName>
            </value>
            <value>
                <fullName>Golden Books</fullName>
            </value>
            <value>
                <fullName>Graduate Call</fullName>
            </value>
            <value>
                <fullName>Growthonics Prospecting</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>In-house Program</fullName>
            </value>
            <value>
                <fullName>Leadership Directories, Inc</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Marketing – Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>