force-app/main/default/objects/Registration__c/fields/LocalTax__c.field-meta.xml
<CustomField>
    <fullName>LocalTax__c</fullName>
    <label>Local Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>