force-app/main/default/objects/Registration__c/fields/ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>ProgramCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Code</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>Participants1</relationshipName>
    <type>Lookup</type>
</CustomField>