force-app/main/default/objects/Registration__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <formula>TEXT(ProgramCode__r.ProgramType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>