force-app/main/default/objects/Registration__c/fields/PromoCode_del__c.field-meta.xml
<CustomField>
    <fullName>PromoCode_del__c</fullName>
    <label>Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>