force-app/main/default/objects/Registration__c/fields/RegistrationType__c.field-meta.xml
<CustomField>
    <fullName>RegistrationType__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Scholorship</fullName>
            </value>
            <value>
                <fullName>Company Replacement</fullName>
            </value>
            <value>
                <fullName>Make Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>