force-app/main/default/objects/Registration__c/fields/ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewStatus__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>