force-app/main/default/objects/Registration__c/fields/ScholarshipDiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>ScholarshipDiscountPercentage__c</fullName>
    <label>Scholarship Discount Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>