force-app/main/default/objects/Registration__c/fields/StateTax__c.field-meta.xml
<CustomField>
    <fullName>StateTax__c</fullName>
    <label>State Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>