force-app/main/default/objects/Registration__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>TotalRegistrationFee__c  * ( AccountName__r.Withholding_Tax__c  +  AccountName__r.Alt_Revenue_Tax__c  +  AccountName__r.Federal_Tax__c  +  AccountName__r.Local_Tax__c  +  AccountName__r.State_Tax__c  +  AccountName__r.Value_Added_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>