force-app/main/default/objects/Registration__c/fields/TotalCommissionableAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCommissionableAmount__c</fullName>
    <label>Total Commissionable Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>