force-app/main/default/objects/Registration__c/fields/TotalPayments__c.field-meta.xml
<CustomField>
    <fullName>TotalPayments__c</fullName>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>