force-app/main/default/objects/Registration__c/fields/TotalRegistrationFee__c.field-meta.xml
<CustomField>
    <fullName>TotalRegistrationFee__c</fullName>
    <formula>((BaseRegistrationFee__c  +  AwarenessSustainmentFee__c) - (ScholarshipDiscountPercentage__c  * BaseRegistrationFee__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>