force-app/main/default/objects/Registration__c/fields/Value_Added_Tax__c.field-meta.xml
<CustomField>
    <fullName>Value_Added_Tax__c</fullName>
    <label>Value Added Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>