force-app/main/default/objects/Registration__c/fields/WithholdingTax__c.field-meta.xml
<CustomField>
    <fullName>WithholdingTax__c</fullName>
    <label>Withholding Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>